[Beacon][Cocoa] Beacon requests with BufferSource payload should not have a Content-Type HTTP header https://bugs.webkit.org/show_bug.cgi?id=178027 <rdar://problem/34748470>

Reviewed by Youenn Fablet.

Source/WebCore/PAL:

Add new CFNetwork SPI.

* pal/spi/cf/CFNetworkSPI.h:

Source/WebKit:

Use new NSURLSessionConfiguration._suppressedAutoAddedHTTPHeaders CFNetwork SPI to
make sure that CFNetwork never adds a Content-Type HTTP headers to our requests
when we did not add one.

This is covered by the following tests on newer OSes:
- imported/w3c/web-platform-tests/beacon/headers/header-content-type.html
- http/tests/blink/sendbeacon/beacon-same-origin.html

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa):


Canonical link: https://commits.webkit.org/194285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223014 268f45cc-cd09-0410-ab3c-d52691b4dbfc